--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.main.allow-bean-definition-overriding=true
+open.meteo.address=https://api.open-meteo.com/v1
+weather.daily.parameters=sunset,sunrise,precipitation_sum
+weather.timezone=Europe/Warsaw
 
+spring.datasource.url=jdbc:h2:mem:weather_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
